--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Our Essay Journal</title>
+    <title>Confessions</title>
     <style>
         body { background-color: black; color: gray; font-family: 'Times New Roman', serif; margin: 20px; padding: 20px; }
         h1 { color: white; text-align: center; }
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Our Shared Essay Journal</h1>
+    <h1>Confessions</h1>
     <p>Upload your essays here (PDF, DOC, or Word). Files will be listed below for download.</p>
     <div class="upload-section">
         <input type="file" accept=".pdf,.doc,.docx" multiple id="fileInput">
